<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="SignUp">Create an email</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="username">username</string>
    <string name="welcome">Hey, Welcome</string>
    <string name="welcome_page_text">Here at ‘Elonsol Shop‘ we realize that style
        and prosperity begin with the correct shoes. We likewise understand that
        effectively finding the size and style to meet your requirements is vital
        to your web-based shopping knowledge.</string>
    <string name="instruction_text1">You can specify shoe Name, Company, Shoe Size and Description</string>
    <string name="instruction_text0">In our shop, you will find different types of shoes to choose from</string>
    <string name="instructions_text2">Then add to Shoe List</string>
    <string name="get_started">get started</string>
    <string name="next">Next</string>
    <string name="show_details_text">Shoes Details</string>
    <string name="name">Name</string>
    <string name="enter_shoes_name_hint">enter shoes name</string>
    <string name="company">Company</string>
    <string name="enter_shoes_company_hint">enter shoes company</string>
    <string name="size">Size</string>
    <string name="enter_shoes_size_hint">enter shoes size</string>
    <string name="description">Description</string>
    <string name="enter_shoes_description">enter shoes description</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
</resources>
