<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightGray"
            android:padding="@dimen/mid_margin"
            tools:context=".ShoeDetailsFragment">

            <TextView
                android:id="@+id/shoe_details_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:paddingBottom="@dimen/big_margin"
                android:text="@string/show_details_text"
                android:textSize="@dimen/shoeDetails_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_text"
                style="@style/shoe_details_field_text"

                android:layout_marginStart="16dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_details_text" />

            <EditText
                android:id="@+id/enter_name"
                style="@style/shoe_details_edittext"
                android:hint="@string/enter_shoes_name_hint"
                android:text="@={viewModel.name}"
                app:layout_constraintBaseline_toBaselineOf="@+id/name_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_text" />

            <TextView
                android:id="@+id/company_text"
                style="@style/shoe_details_field_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mid_margin"
                android:layout_marginStart="32dp"
                android:layout_marginTop="36dp"
                android:text="@string/company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_text" />

            <EditText
                android:id="@+id/enter_company"
                style="@style/shoe_details_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_shoes_company_hint"
                android:text="@={viewModel.company}"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@id/company_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/company_text"
                app:layout_constraintTop_toBottomOf="@+id/enter_name" />

            <TextView
                android:id="@+id/size_text"
                style="@style/shoe_details_field_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mid_margin"
                android:text="@string/size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company_text" />

            <EditText
                android:id="@+id/enter_size"
                style="@style/shoe_details_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_shoes_size_hint"
                android:text="@={viewModel.size}"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@id/size_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/size_text"
                app:layout_constraintTop_toBottomOf="@+id/enter_company" />

            <TextView
                android:id="@+id/description_text"
                style="@style/shoe_details_field_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mid_margin"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/size_text" />

            <EditText
                android:id="@+id/enter_description"
                style="@style/shoe_details_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/enter_shoes_description"
                android:text="@={viewModel.description}"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="6"
                android:minLines="6"
                android:scrollbars="vertical"
                app:layout_constraintBaseline_toBaselineOf="@id/description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toEndOf="@+id/description_text"
                app:layout_constraintTop_toBottomOf="@+id/enter_size" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/rounded_button"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_description" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:text="@string/cancel"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>