<?xml version="1.0" encoding="utf-8"?>
<!-- scrollView only to make make my app work in case of Landscape because I didn't
   create special layout for Landscape case so I do that to make the user having the
   ability to use the app in Landscape although poor layout in landscape but it still
   working better than the case I didn't do that-->

<!-- Linear layout because the design have some views organized only vertically so I
 found that no need to make it constraint layout, I can but no need I think Linearlayout
   is enough-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightGray"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/mid_margin"
            tools:context=".InstructionFragment">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="369dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/mid_margin"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/how_to_buy" />

            <TextView

                android:id="@+id/instruction_text1"
                style="@style/instruction_text"
                android:text="@string/instruction_text0" />

            <TextView
                android:id="@+id/instruction_text2"
                style="@style/instruction_text"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="@string/instruction_text1"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/instruction_text3"
                style="@style/instruction_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_text2" />

            <Button
                android:id="@+id/get_started_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mid_margin"
                android:background="@drawable/rounded_button"
                android:text="@string/get_started"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</layout>