<?xml version="1.0" encoding="utf-8"?>

<!-- scrollView only to make make my app work in case of Landscape because I didn't
   create special layout for Landscape case so I do that to make the user having the
   ability to use the app in Landscape although poor layout in landscape but it still
   working better than the case I didn't do that-->

<!-- Linear layout because the design have some views organized only vertically so I
 found that no need to make it constraint layout, I can but no need I think Linearlayout
   is enough-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/lightGray"
            android:orientation="vertical"
            android:padding="@dimen/small_magrin"
            tools:context=".LoginFragment">


            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mid_margin"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/shoe" />

            <EditText
                android:id="@+id/enter_email"
                style="@style/login_field"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/enter_password"
                style="@style/login_field"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mid_margin"
                android:layout_marginBottom="@dimen/small_magrin"
                android:background="@drawable/rounded_button"
                android:text="@string/Login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/signUp_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_magrin"
                android:background="@drawable/rounded_button"
                android:text="@string/SignUp"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</layout>
