<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/mid_margin"
            tools:context=".WelcomeFragment">

            <TextView
                android:id="@+id/welcome_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mid_margin"
                android:text="@string/welcome"
                android:textSize="34sp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mid_margin"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/shoes_in_welcome" />

            <TextView
                android:id="@+id/paragraph_welcome_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/welcome_page_text"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:background="@drawable/rounded_button"
                android:text="@string/next"
                android:textColor="@color/white" />


        </LinearLayout>
    </ScrollView>
</layout>